24-03-05 | 박검지 | Home Carousel 영역 컨텐츠 추가

--- a/src/main/resources/templates/thymeleaf/Member/mypage.html
+++ b/src/main/resources/templates/thymeleaf/Member/mypage.html
@@ -33,29 +33,22 @@
 							<div class="rounded-circle overflow-hidden m-1 p-1 mb-0 bg-white">
 								<img src="../img/mypage/menu_ico_1.png" class="img-fluid p-2"
 									alt="...">
-							</div>
-							<span>예약</span>
-						</a>
-						<a href="/band" class="my-menu-ico">
+							</div> <span>예약</span>
+						</a> <a href="/band" class="my-menu-ico">
 							<div class="rounded-circle overflow-hidden m-1 p-1 mb-0 bg-white">
 								<img src="../img/mypage/menu_ico_2.png" class="img-fluid p-2"
 									alt="...">
-							</div>
-							<span>소모임</span>
-						</a>
-						<a href="/feed" class="my-menu-ico">
+							</div> <span>소모임</span>
+						</a> <a href="/feed" class="my-menu-ico">
 							<div class="rounded-circle overflow-hidden m-1 p-1 mb-0 bg-white">
 								<img src="../img/mypage/menu_ico_3.png" class="img-fluid p-2"
 									alt="...">
-							</div>
-							<span>피드</span>
-						</a>
-						<a href="/infoCourse" class="my-menu-ico">
+							</div> <span>피드</span>
+						</a> <a href="/infoCourse" class="my-menu-ico">
 							<div class="rounded-circle overflow-hidden m-1 p-1 mb-0 bg-white">
 								<img src="../img/mypage/menu_ico_4.png" class="img-fluid p-2"
 									alt="...">
-							</div>
-							<span>코스</span>
+							</div> <span>코스</span>
 						</a>
 					</div>
 				</div>
@@ -217,34 +210,58 @@
 									<h5 class="text-start">좋아요</h5>
 									<a href="/feed" class="gg-dim-txt f13">전체보기</a>
 								</div>
-								<div class="row mx-auto mt-3 gap-1" th:classappend="${#lists.size(feed) % 3 == 0} ? 'justify-content-center'">
+								<div class="row mx-auto mt-3 gap-1"
+									th:classappend="${#lists.size(feed) % 3 == 0} ? 'justify-content-center'">
 									<!-- Feed List의 사이즈 존재 -->
-									<th:block th:if="${#lists.size(feed) ne 0}"
+									<th:block th:if="${#lists.size(feed) > 0}"
 										th:each="feed:${feed}">
 										<!--todo / 이미지 정사각형 만들기-->
 										<!-- 좋아요 누른 부분만 출력 -->
 										<a th:href="@{'/feed_show?num='+${feed.getFeed_num()}}"
 											class="col-4 text-center my-like-box overflow-hidden d-flex justify-content-center p-0"
 											th:if="${feed.getFeed_heart_on() eq 1}">
-											<!-- feed_thumbnail에 들어있는 이미지를 ,로 쪼개서 1번째 이미지 추출 -->
 											<img
-												th:src="@{'../img/feed_thumbnail/' + ${#strings.arraySplit(feed.getFeed_thumbnail(), ',')[0]}}"
-												class="img-fluid rounded-2" alt="">
+											th:src="@{'../img/feed_thumbnail/' + ${#strings.arraySplit(feed.getFeed_thumbnail(), ',')[0]}}"
+											class="img-fluid rounded-2" alt="">
 										</a>
-										<a class="col-4 text-center my-like-box overflow-hidden d-flex justify-content-center p-0"
+										<!-- Feed List의 하트 미 존재 -->
+<!-- 										<a
+											class="col-4 text-center my-like-box overflow-hidden d-flex justify-content-center p-0"
 											th:unless="${feed.getFeed_heart_on() eq 1}">
-											<!-- feed_thumbnail에 들어있는 이미지를 ,로 쪼개서 1번째 이미지 추출 -->
 											좋아요 눌러라!
-										</a>
+										</a> -->
+										<div class="col text-center py-5 my-5" th:unless="${feed.getFeed_heart_on() eq 1}">
+											<img src="../img/feed/out-of-stock.png" class="mb-4"
+												width="100" height="100" alt="" /> <span
+												class="h5 text-muted d-block">현재 <span
+												th:if="${not #strings.isEmpty(feed_theme)}"
+												th:text="${feed_theme}"></span> <span
+												th:if="${feed_area}!=null" th:text="${feed_area}">feed_area</span>
+												코스 목록이 비어있어요
+											</span> <span class="text-muted"><span
+												class="d-inline-block text-muted"
+												th:text="|${session.Member_Name}님이|"
+												th:if="${session.Member_Id}!=null"></span> 먼저 작성해보세요!</span> <a
+												href="/aicc"
+												class="m-auto text-center btn btn-main my-4 p-2 px-5 f14">
+												피드 보러 가기 </a>
+										</div>
+										
 									</th:block>
-									<!-- Feed List의 사이즈 미 존재 -->
-									<div th:if="${#lists.isEmpty(feed)}" class="my-3 text-black">좋아요 눌러주세용~</div>
+											
+									
+									<div th:if="${#lists.isEmpty(feed)}" class="my-3 text-black">좋아요
+										눌러주세용~</div>
 								</div>
+								
+								
+								
 							</div>
 						</div>
 					</div>
 					<!-- 보관함 | 우측의 우측 -->
-					<div class="col-12 col-md w-100 d-flex align-items-stretch border rounded-4 p-4 mt-md-0">
+					<div
+						class="col-12 col-md w-100 d-flex align-items-stretch border rounded-4 p-4 mt-md-0">
 						<div class="row p-0">
 							<!--보관함-->
 							<div class="col-12">
@@ -255,69 +272,71 @@
 											th:href="@{'mypageCourseAll?id='+${loginMember.getMember_Id()}}"
 											class="gg-dim-txt f13">전체보기</a>
 									</th:block>
-									
+
 								</div>
 								<th:block th:unless="${#lists.size(course) !=0}">
-											<div class="row">
-				<div class="col text-center py-5 my-5">
-					<img src="../img/feed/out-of-stock.png" class="mb-4" width="100"
-						height="100" alt="" /> <span class="h5 text-muted d-block">현재 <span
-						th:if="${not #strings.isEmpty(feed_theme)}"
-						th:text="${feed_theme}"></span> <span th:if="${feed_area}!=null"
-						th:text="${feed_area}">feed_area</span> 코스 목록이 비어있어요
-					</span> <span class="text-muted"><span
-						class="d-inline-block text-muted"
-						th:text="|${session.Member_Name}님이|"
-						th:if="${session.Member_Id}!=null"></span> 먼저 작성해보세요!</span> <a
-						href="/aicc"
-						class="m-auto text-center btn btn-main my-4 p-2 px-5 f14"> 코스 저장
-						하러 가기 </a>
-				</div>
-			</div>
-									</th:block>
+									<div class="row">
+										<div class="col text-center py-5 my-5">
+											<img src="../img/feed/out-of-stock.png" class="mb-4"
+												width="100" height="100" alt="" /> <span
+												class="h5 text-muted d-block">현재 <span
+												th:if="${not #strings.isEmpty(feed_theme)}"
+												th:text="${feed_theme}"></span> <span
+												th:if="${feed_area}!=null" th:text="${feed_area}">feed_area</span>
+												코스 목록이 비어있어요
+											</span> <span class="text-muted"><span
+												class="d-inline-block text-muted"
+												th:text="|${session.Member_Name}님이|"
+												th:if="${session.Member_Id}!=null"></span> 먼저 작성해보세요!</span> <a
+												href="/aicc"
+												class="m-auto text-center btn btn-main my-4 p-2 px-5 f14">
+												코스 저장 하러 가기 </a>
+										</div>
+									</div>
+								</th:block>
 							</div>
 
-									<div class="col-6 text-start my-scrap-box mb-4"
-										th:each="course:${course}">
-										<th:block th:if="${#lists.size(course) !=0}">
-											<a th:href="@{'Course_view?num='+ ${course.getCourse_num()}}">
-												<div class="my-scrap-box-img rounded-2">
-													<img th:src="@{'../img/info/' + ${course.getCourse_img()}}"
-														alt="" class="img-fluid">
-												</div> <span class="f12 text-muted mt-2 "
-												th:text="${course.getCourse_Name()}">사용자지정태그</span> <span
-												class="f14 text-truncate"
-												th:text="${course.getCourse_content()}">맥주여행! 이렇게만
-													하세요🍺</span> <img
-												th:src="@{'../img/member_thumbnail/'+${course.getMember_profileimage()}}"
-												class="rounded-circle" width="19" alt=""> <span
-												class="d-inline f12 text-muted px-1"
-												th:text="${course.getMember_Id}">userName</span>
-											</a>
-										</th:block>
-										
-									</div>
-								</div>
+							<div class="col-6 text-start my-scrap-box mb-4"
+								th:each="course:${course}">
+								<th:block th:if="${#lists.size(course) !=0}">
+									<a th:href="@{'Course_view?num='+ ${course.getCourse_num()}}">
+										<div class="my-scrap-box-img rounded-2">
+											<img th:src="@{'../img/info/' + ${course.getCourse_img()}}"
+												alt="" class="img-fluid">
+										</div> <span class="f12 text-muted mt-2 "
+										th:text="${course.getCourse_Name()}">사용자지정태그</span> <span
+										class="f14 text-truncate"
+										th:text="${course.getCourse_content()}">맥주여행! 이렇게만
+											하세요🍺</span> <img
+										th:src="@{'../img/member_thumbnail/'+${course.getMember_profileimage()}}"
+										class="rounded-circle" width="19" alt=""> <span
+										class="d-inline f12 text-muted px-1"
+										th:text="${course.getMember_Id}">userName</span>
+									</a>
+								</th:block>
+
 							</div>
 						</div>
 					</div>
 				</div>
-			</section>
-			<!-- [M] AD 영역 -->
-			<div
-				class="d-md-none mx-auto row border rounded-4 my-5 pt-5 p-3 my-ad-parent">
-				<div class="col h-100">
-					<strong class="d-block mb-3">원하는 여행지를 찾지 못하셨나요?</strong> <span
-						class="badge rounded-pill text-bg-info text-white mb-1">AD</span>
-					<!--AD 이미지-->
-					<img src="../img/feed/oedo.jpg" class="img-fluid rounded-4" alt="">
-					<div class="d-flex align-items-center my-ad-img my-3">
-						<i class="fa-solid fa-location-dot float-start me-2"></i> <span
-							class="float-start f13">외도 보타니아</span>
-					</div>
-				</div>
+		</div>
+	</div>
+	</section>
+	<!-- [M] AD 영역 -->
+	<div
+		class="d-md-none mx-auto row border rounded-4 my-5 pt-5 p-3 my-ad-parent">
+		<div class="col h-100">
+			<strong class="d-block mb-3">원하는 여행지를 찾지 못하셨나요?</strong> <span
+				class="badge rounded-pill text-bg-info text-white mb-1">AD</span>
+			<!--AD 이미지-->
+			<img src="../img/feed/oedo.jpg" class="img-fluid rounded-4" alt="">
+			<div class="d-flex align-items-center my-ad-img my-3">
+				<i class="fa-solid fa-location-dot float-start me-2"></i> <span
+					class="float-start f13">외도 보타니아</span>
 			</div>
 		</div>
+	</div>
+	</div>
 	</div>
 	<!--container-->
 	<!--footer-->
@@ -359,6 +378,6 @@
 		});
 	</script>
 	<div th:replace="~{footer/footer::footer}"></div>
-	
+
 </body>
 </html>
