--- a/src/main/resources/templates/thymeleaf/feed/feed2.html
+++ b/src/main/resources/templates/thymeleaf/feed/feed2.html
@@ -461,9 +461,9 @@
 	            // Isotope 그리드를 'recentSort' 기준으로 다시 정렬
 	            $grid.isotope({
 	                sortBy: 'recentSort',
-	                sortAscending: {
+	                /* sortAscending: {
 	                    recentSort: false // 최신순을 내림차순으로 정렬하여 최신순으로 표시
-	                }
+	                } */
 	            });
 	        });
 	    });
