--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -602,6 +602,59 @@ div.home_band_recomand_text>span {
 	white-space: nowrap;
 }
 
+/* feed 수정 */
+
+.home-feed-box{
+	width: 296px !important;
+}
+
+
+/* 검색탭 AD */
+.img-container {
+  width: 100vw;
+  height: 320px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.img-container img {
+  width: 400px;
+  height: 300px;
+  background-color: #87A0E2;
+  border-radius: 16px;
+  position: absolute;
+  user-select: none;
+  transition-property: transform, opacity, zIndex, ; 
+  transition-duration: 0.3s; 
+  transition-timing-function: ease-out; 
+}
+.arrows {
+  width: 900px;
+  height: auto;
+  display: flex;
+  justify-content: space-between;
+  z-index: 100;
+}
+.arrows svg {
+  width: 60px;
+  height: 60px;
+  position: relative;
+  fill: white;
+  opacity: 0.8;
+  cursor: pointer;
+}
+
+.arrows svg:active {
+  transform: scale(0.9);
+  opacity: 1;
+  transition-property: transform, opacity; 
+  transition-duration: 0.3s; 
+  transition-timing-function: ease-out; 
+}
+
+
 /*****************************작은 모니터 크기*************/
 @media screen and (min-width:768px) and (max-width:959px) {
 	ul.hotPlace_area_map_ul {
