--- a/src/main/resources/templates/alert/toast.html
+++ b/src/main/resources/templates/alert/toast.html
@@ -1,8 +1,8 @@
 <!-- toast -->
 <div aria-live="polite" aria-atomic="true" 
 	class="fixed-top my-toast-parent d-flex justify-content-center align-items-center w-100 mt-5">
-	<div class="toast my-toast rounded-4 mt-5" role="alert" data-bs-autohide="false"
-		aria-live="assertive" data-bs-delay="5000" aria-atomic="false">
+	<div class="toast my-toast rounded-4 mt-5" role="alert"
+		aria-live="assertive" data-bs-delay="3000" aria-atomic="false">
 		<div class="d-flex hstack m-auto justify-content-center p-3 gap-2 shadow-s rounded-4">
 			<div id="warnImg" class="hstack"> 
 				<img src="../img/mypage/crisis.png" class="m-auto warnImg" width="21" height="21" alt="" />
