--- a/src/main/resources/templates/thymeleaf/info/Event_view.html
+++ b/src/main/resources/templates/thymeleaf/info/Event_view.html
@@ -30,9 +30,9 @@
 		<div class="row mb-5 px-5">
 			<div class="col text-center " data-aos="fade-up">
 				<h3 class="my-5 ">
-					<span class="highlight"
+					<span class="highlight p-0"
 						th:text="| [ ${view.getEvent_category()} ] |">버튼</span> <span
-						th:text="${view.getEvent_name()}"></span>
+						th:text="${view.getEvent_name()}" class="ms-1"></span>
 				</h3>
 				
 				<img th:src="@{'../img/info/' + ${view.getEvent_thumbnail()}}"
@@ -45,7 +45,7 @@
 				<h4 class="mt-2 mt-lg-5 mb-3 px-lg-3" data-aos="fade-up">상세 정보</h4>
 				<hr>
 				<p class="px-lg-5 textcontent px-3"
-					th:text="${view.getEvent_content()}" data-aos="fade-up">내용 들어가는 곳</p>
+					th:utext="${view.getEvent_content()}" data-aos="fade-up">내용 들어가는 곳</p>
 
 
 				<div class="map_mapSection w-100 my-5 px-5" data-aos="fade-up">
@@ -105,25 +105,25 @@
 						<button class="btn btn-mainbg">
 							# <span th:text="${view.getEvent_tag()}"></span>
 						</button>
-						<button class="btn btn-pink">
+						<button class="btn btn-pink my-1">
 							# <span th:text="${view.getEvent_tag2()}"></span>
 						</button>
-						<button class="btn btn-pink">
+						<button class="btn btn-pink my-1">
 							# <span th:text="${view.getEvent_tag3()}"></span>
 						</button>
-						<button class="btn btn-pink">
+						<button class="btn btn-pink my-1">
 							# <span th:text="${view.getEvent_tag4()}"></span>
 						</button>
-						<button class="btn btn-pink">
+						<button class="btn btn-pink my-1">
 							# <span th:text="${view.getEvent_tag5()}"></span>
 						</button>
-						<button class="btn btn-pink">
+						<button class="btn btn-pink my-1">
 							# <span th:text="${view.getEvent_area()}"></span>
 						</button>
-						<button class="btn btn-pink">
+						<button class="btn btn-pink my-1">
 							# <span th:text="${view.getEvent_area2()}"></span>
 						</button>
-						<button class="btn btn-pink">
+						<button class="btn btn-pink my-1">
 							# <span th:text="${view.getEvent_parking()}"></span>
 						</button>
 
