--- a/src/main/resources/templates/thymeleaf/band/band.html
+++ b/src/main/resources/templates/thymeleaf/band/band.html
@@ -11,6 +11,7 @@
             <div class="container band_lnb_box pt-5">
                 <ul class="band_lnb_ul p-0 d-flex">
                     <li class="band_lnb_item active">나의 동행</li>
+                    <li class="band_lnb_item">채팅</li>
                 </ul>
             </div>
         </div>
