--- a/src/main/resources/static/css/map.css
+++ b/src/main/resources/static/css/map.css
@@ -1,3 +1,9 @@
+#index_map{
+	height: 100vh;
+	overflow : hidden;
+}
+
+
 /* 맵 컨텐츠 전체를 감싸는 영역 스타일 */
 div.map_all_contentBox {
 	width: 100%;
@@ -9,13 +15,13 @@ div.map_all_contentBox {
 div.map_guide {
 	width: 400px;
 	/* height: calc( 100vh - 200px ); */
-	height: 100vh;
 }
 
 div.map_curr_locationBox {
 	width: 100%;
 	box-sizing: border-box;
 	margin-bottom: 20px;
+	
 }
 
 /* map_guide_iconBox 스타일 */
@@ -25,6 +31,7 @@ ul.map_guide_icon_list {
 	flex-wrap: wrap;
 	justify-content: space-between;
 	box-sizing: border-box;
+	height: 150px;
 }
 
 li.map_guide_icon_item {
@@ -46,6 +53,14 @@ li.map_icon_near_trip::before {
 	margin: auto;
 	background: url('../img/map/icon_depth1_menu.png') no-repeat;
 }
+li.map_icon_near_trip.on::before {
+	content: '';
+	display: block;
+	width: 36px;
+	height: 36px;
+	margin: auto;
+	background: url('../img/map/icon_depth1_menu_on.png') no-repeat;
+}
 
 li.map_icon_food::before {
 	content: '';
@@ -54,6 +69,15 @@ li.map_icon_food::before {
 	height: 36px;
 	margin: auto;
 	background: url('../img/map/icon_depth1_menu.png') no-repeat;
+	background-position-y: -36px;
+}
+li.map_icon_food.on::before {
+	content: '';
+	display: block;
+	width: 36px;
+	height: 36px;
+	margin: auto;
+	background: url('../img/map/icon_depth1_menu_on.png') no-repeat;
 	background-position-y: -36px;
 }
 
@@ -66,6 +90,15 @@ li.map_icon_cafe::before {
 	background: url('../img/map/icon_depth1_menu.png') no-repeat;
 	background-position-y: -72px;
 }
+li.map_icon_cafe.on::before {
+	content: '';
+	display: block;
+	width: 36px;
+	height: 36px;
+	margin: auto;
+	background: url('../img/map/icon_depth1_menu_on.png') no-repeat;
+	background-position-y: -72px;
+}
 
 li.map_icon_hotel::before {
 	content: '';
@@ -74,6 +107,15 @@ li.map_icon_hotel::before {
 	height: 36px;
 	margin: auto;
 	background: url('../img/map/icon_depth1_menu.png') no-repeat;
+	background-position-y: -108px;
+}
+li.map_icon_hotel.on::before {
+	content: '';
+	display: block;
+	width: 36px;
+	height: 36px;
+	margin: auto;
+	background: url('../img/map/icon_depth1_menu_on.png') no-repeat;
 	background-position-y: -108px;
 }
 
@@ -86,6 +128,15 @@ li.map_icon_park::before {
 	background: url('../img/map/icon_depth1_menu.png') no-repeat;
 	background-position-y: -144px;
 }
+li.map_icon_park.on::before {
+	content: '';
+	display: block;
+	width: 36px;
+	height: 36px;
+	margin: auto;
+	background: url('../img/map/icon_depth1_menu_on.png') no-repeat;
+	background-position-y: -144px;
+}
 
 li.map_icon_electric_charg::before {
 	content: '';
@@ -94,6 +145,15 @@ li.map_icon_electric_charg::before {
 	height: 36px;
 	margin: auto;
 	background: url('../img/map/icon_depth1_menu.png') no-repeat;
+	background-position-y: -180px;
+}
+li.map_icon_electric_charg.on::before {
+	content: '';
+	display: block;
+	width: 36px;
+	height: 36px;
+	margin: auto;
+	background: url('../img/map/icon_depth1_menu_on.png') no-repeat;
 	background-position-y: -180px;
 }
 
@@ -106,6 +166,15 @@ li.map_icon_recomand_thema::before {
 	background: url('../img/map/icon_depth1_menu.png') no-repeat;
 	background-position-y: -216px;
 }
+li.map_icon_recomand_thema.on::before {
+	content: '';
+	display: block;
+	width: 36px;
+	height: 36px;
+	margin: auto;
+	background: url('../img/map/icon_depth1_menu_on.png') no-repeat;
+	background-position-y: -216px;
+}
 
 li.map_icon_trip_course::before {
 	content: '';
@@ -114,6 +183,15 @@ li.map_icon_trip_course::before {
 	height: 36px;
 	margin: auto;
 	background: url('../img/map/icon_depth1_menu.png') no-repeat;
+	background-position-y: -252px;
+}
+li.map_icon_trip_course.on::before {
+	content: '';
+	display: block;
+	width: 36px;
+	height: 36px;
+	margin: auto;
+	background: url('../img/map/icon_depth1_menu_on.png') no-repeat;
 	background-position-y: -252px;
 }
 
@@ -126,6 +204,15 @@ li.map_icon_myTrip::before {
 	background: url('../img/map/icon_depth1_menu.png') no-repeat;
 	background-position-y: -288px;
 }
+li.map_icon_myTrip.on::before {
+	content: '';
+	display: block;
+	width: 36px;
+	height: 36px;
+	margin: auto;
+	background: url('../img/map/icon_depth1_menu_on.png') no-repeat;
+	background-position-y: -288px;
+}
 
 li.map_icon_set::before {
 	content: '';
@@ -136,12 +223,21 @@ li.map_icon_set::before {
 	background: url('../img/map/icon_depth1_menu.png') no-repeat;
 	background-position-y: -324px;
 }
+li.map_icon_set.on::before {
+	content: '';
+	display: block;
+	width: 36px;
+	height: 36px;
+	margin: auto;
+	background: url('../img/map/icon_depth1_menu_on.png') no-repeat;
+	background-position-y: -324px;
+}
 
 /* 맵 출력 아이템 리스트 스타일 */
 div.mapListItemBox{
-	height: 100%;
-	border : 1px solid red;
-	overflow-y : scroll;
+	overflow : scroll !important;
+	height: calc( 100vh - 150px );
+	width: 400px;
 }
 
 /* 카카오 맵 스타일 */
@@ -152,7 +248,7 @@ div#map {
 
 /* map_mapSection sytle */
 div.map_mapSection {
-	width: calc(100% - 350px);
+	width: calc(100% - 400px);
 }
 
 /*Event_contentRow 데이터 불러온 내용 스타일*/
