--- a/src/main/resources/templates/thymeleaf/band/bandChat.html
+++ b/src/main/resources/templates/thymeleaf/band/bandChat.html
@@ -24,73 +24,78 @@
 		
         <!-- myBandContent -->
         <div class="myBand_content">
-            <div class="container myBand_contentBox px-0 d-flex flex-md-column flex-sm-column flex-lg-row ">
-                <!-- col1 밴드 이미지, 제목 정보 영역 -->
-				<div class="col-12 col-lg-3 myBand_content_col_titleBox">
-					<div class="myBand_content_col_title sticky-md-top flex-column mr-md-5">
-						<div class="myBand_title_img">
-							<img
-								th:src="@{'../img/uploadBandThumnail/'+ ${myBandList.getBand_thumnail()}}"
-								class="img-fluid join_band_item_img" alt="...">
-						</div>
-						<div class="myBand_title_name">
-							<h3 th:text="${myBandList.getBand_name()}"></h3>
-						</div>
-						<div id="myBand_member_countBtn" class="myBand_member_count" onclick="return func_bandMember()">
-							<a class="myBandLink" th:href="@{'/mybandMember?bandUrl='+${myBandList.getBand_code()}}">
-								<span th:text="|멤버  ${myBandList.getBand_memberCount()} 명|"></span>
-							</a>
-						</div>
-						
-						<div class="myBand_info">
-							<span th:text="${myBandList.getBand_content()}"></span>
-						</div>
-						
-						
-						
-						<!-- 가입한 밴드 확인 영역 -->
-						<th:block th:if="${checkMember == null}">
-							<form action="addBandMember" method="post" name="addMember_band">
-								<div class="myBand_write_btn">
-									<input name="bandCode" type="hidden" th:value="${myBandList.getBand_code()}" />
-									<input name="joinMemberId" type="hidden" th:value="${session.Member_Id}" />
-									<a href="javascript:addMember_band.submit();" >
-										<span>가입하기</span>
-									</a>								
-								</div>		
-							</form>
-						</th:block>
-						<th:block th:unless="${checkMember == null}">
-							<div class="myBand_write_btn">
-								<a
-									th:href="@{'bandFeedWrite?bandUrl='+${myBandList.getBand_code()}}">
-									<span>글쓰기</span>
-								</a>
-							</div>
-						
-						</th:block>
-						<!-- 로그인 아이디와 밴드 관리자 아이디가 같을 때 -->
-						<th:block th:if="${session.Member_Id ne null}">
-							<th:block th:if="${ session.Member_Id eq myBandList.getBand_admin() }">
-								<a th:href="@{'setMyBand?bandUrl='+${myBandList.getBand_code()}}" class="btn btn-success">밴드 설정</a>
-							</th:block>
-							<th:block th:if="${ session.Member_Id ne myBandList.getBand_admin() and  checkMember ne null}">
-								<a th:href="@{'withdrawalMyBand?bandUrl='+${myBandList.getBand_code()}}" class="btn btn-success" onclick="return func_bandWithdrawal() ">밴드 탈퇴하기</a>
-							</th:block>
-						</th:block>
+            <div class="row gap-3 m-auto justify-content-around container myBand_contentBox px-0">
+	            <!-- col1 밴드 이미지, 제목 정보 영역 -->
+	            <div class="col-12 col-lg-3 myBand_content_col_titleBox p-4">
+	               <div class="myBand_content_col_title sticky-md-top flex-column mr-md-5">
+	                  <div class="myBand_title_img">
+	                     <img
+	                        th:src="@{'../img/uploadBandThumnail/'+ ${myBandList.getBand_thumnail()}}"
+	                        class="img-fluid join_band_item_img" alt="...">
+	                  </div>
+	                  <div class="myBand_title_name d-flex justify-content-between text-truncate">
+	                     <h3 th:text="${myBandList.getBand_name()}" class="text-truncate my-3 h4"></h3>
+		              </div>
+	                  <!-- 로그인 아이디와 밴드 관리자 아이디가 같을 때 -->
+	                     <th:block th:if="${session.Member_Id ne null}">
+	                        <th:block
+	                           th:if="${ session.Member_Id eq myBandList.getBand_admin() }">
+	                           <a
+	                              th:href="@{'setMyBand?bandUrl='+${myBandList.getBand_code()}}"
+	                              class="myBand_adminBandSet py-1 hstack d-flex float-end"><span class="hstack">밴드 설정</span></a>
+	                        </th:block>
+	                        <th:block
+	                           th:if="${ session.Member_Id ne myBandList.getBand_admin() and  checkMember ne null}">
+	                           <a
+	                              th:href="@{'withdrawalMyBand?bandUrl='+${myBandList.getBand_code()}}"
+	                              class="myBand_memberBandSet py-1 hstack d-flex float-end"
+	                              onclick="return func_bandWithdrawal() ">밴드 탈퇴하기</a>
+	                        </th:block>
+	                     </th:block>
+	                  <div id="myBand_member_countBtn" class="myBand_member_count" onclick="return func_bandMember()">
+	                     <a class="myBandLink" th:href="@{'/mybandMember?bandUrl='+${myBandList.getBand_code()}}">
+	                        <span class="f13" th:text="|멤버  ${myBandList.getBand_memberCount()} 명|"></span>
+	                     </a>
+	                  </div>
+	                  <hr />
+	                  <div class="myBand_info">
+	                     <span th:text="${myBandList.getBand_content()}"></span>
+	                  </div>
+	
+	                  
+	                  <!-- 가입한 밴드 확인 영역 -->
+	                  <th:block th:if="${checkMember == null}">
+	                     <form action="addBandMember" method="post" name="addMember_band">
+	                        <div class="myBand_write_btn rounded-3 btn-main">
+	                           <input name="bandCode" type="hidden" th:value="${myBandList.getBand_code()}" />
+	                           <input name="joinMemberId" type="hidden" th:value="${session.Member_Id}" />
+	                           <a href="javascript:addMember_band.submit();" >
+	                              <span>가입하기</span>
+	                           </a>                        
+	                        </div>      
+	                     </form>
+	                  </th:block>
+	                  <th:block th:unless="${checkMember == null}">
+	                     <div class="myBand_write_btn rounded-3 btn-main">
+	                        <a
+	                           th:href="@{'bandFeedWrite?bandUrl='+${myBandList.getBand_code()}}">
+	                           <span class="text-dark f15">글쓰기</span>
+	                        </a>
+	                     </div>
+	                  </th:block>
 						
 						<!-- 밴드 채팅 리스트 영역 -->
-						<th:block th:if="${session.Member_Id ne null}">
-							<div class="band_chatBox px-1 mt-5 w-100">
-								<div class="band_chat col-12">
-									<p class="fw-bold pb-0 mb-0">채팅</p>
-									<hr class="m-0" />
-									<!-- 채팅 내역이 올 영역 -->
-									
-									
-								</div>
-							</div> <!-- band_chatBox -->
-						</th:block>
+	                  <!-- <th:block th:if="${session.Member_Id ne null}">
+	                     <div class="band_chatBox px-1 mt-5 w-100">
+	                        <div class="band_chat col-12">
+	                           <p class="fw-bold pb-0 mb-0">채팅</p>
+	                           <hr class="m-0" />
+	                           채팅 내역이 올 영역
+	                           
+	                           
+	                        </div>
+	                     </div> band_chatBox
+	                  </th:block> -->
 					</div> <!-- myBand_content_col_title -->
 				</div> <!-- myBand_content_col_titleBox : 밴드 정보 -->
 
