--- a/src/main/resources/static/css/mypage.css
+++ b/src/main/resources/static/css/mypage.css
@@ -46,6 +46,12 @@
 	text-shadow: 1px 1px 4px black;
 }
 
+/* 프로필 사진 */
+.my-profile{
+	width: 65px;
+	height: 65px;
+}
+
 /*>>>>>>>>>>>>>>>>>>>>>>>>>> [우] >>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
 
 /* History - ai cokcok swiper */
@@ -184,6 +190,7 @@ label.member-fileUpload {
 .my-toast.toast {
 	border: none;
 	box-shadow: none;
-	backdrop-filter: blur(10px);
-	-webkit-backdrop-filter: blur(10px);
+	backdrop-filter: blur(8px);
+	-webkit-backdrop-filter: blur(8px);
+	background: rgba( 255, 255, 255, 0.65 );
 }
