--- a/src/main/resources/templates/thymeleaf/feed/feed2.html
+++ b/src/main/resources/templates/thymeleaf/feed/feed2.html
@@ -320,7 +320,7 @@
 					</div>
 					<!--feed box bot | text-->
 					<div
-						class="col-12 feed-box-bot hstack border-top text-muted f13 d-flex hstack">
+						class="col-12 feed-box-bot hstack border-top text-dark f13 d-flex hstack">
 						<div class="col-6 hstack justify-content-center border-end my-3">
 							<a th:href="@{'/feed_show?num='+${feed.Feed_num}}" class="text-center d-flex w-100 justify-content-center">
 								<span>댓글</span><i class="fi fi-br-comment-dots hstack px-1"></i>
