--- a/src/main/resources/templates/thymeleaf/feed/feed_show.html
+++ b/src/main/resources/templates/thymeleaf/feed/feed_show.html
@@ -93,7 +93,7 @@
 							</div>
 						</div>
 						<!--feed box bot | text-->
-	                    <div class="col-12 feed-box-bot hstack p-3 border-top text-muted f13 d-flex hstack">
+	                    <div class="col-12 feed-box-bot hstack p-3 border-top f13 d-flex hstack">
 	                        <div class="col-6 hstack justify-content-center border-end d-flex hstack">
 	                            <span>댓글</span>
                                 <i class="fi fi-br-comment-dots hstack px-1"></i>
