--- a/src/main/resources/static/css/feed.css
+++ b/src/main/resources/static/css/feed.css
@@ -1,142 +1,144 @@
 /* 높이 조절 */
-.mh-200{
-  min-height: 200px;
-}
-.xh-200{
-  max-height: 200px;
+.mh-200 {
+	min-height: 200px;
 }
 
+.xh-200 {
+	max-height: 200px;
+}
 
-.border-none{
+.border-none {
 	border: none;
 }
 
-.btn-light:hover, .btn-light:active{
+.btn-light:hover, .btn-light:active {
 	background: var(--black);
 	color: var(--white);
 }
-.btn-light:hover a, .btn-light:active a{
+
+.btn-light:hover a, .btn-light:active a {
 	color: var(--white);
 }
 
-
-#feed{
-  max-width: 1410px;
+#feed {
+	max-width: 1410px;
 }
 
-#feed span{
-  display: block;
+#feed span {
+	display: block;
 }
 /*feed box style*/
-#feed .feed-box{
-display:inline-block;
-  box-sizing: border-box;
-  width: 330px;
-  max-width: 380px;
-  margin-bottom: 12px;
-  overflow: hidden;
+#feed .feed-box {
+	display: inline-block;
+	box-sizing: border-box;
+	width: 330px;
+	max-width: 380px;
+	margin-bottom: 12px;
+	overflow: hidden;
 }
 
-.feed-box{
-  border-radius: 12px;
-  box-shadow: 2px 2px 20px rgba(0,0,0,.06),2px 2px 10px rgba(0,0,0,.04)
+.feed-box {
+	border-radius: 12px;
+	box-shadow: 2px 2px 20px rgba(0, 0, 0, .06), 2px 2px 10px
+		rgba(0, 0, 0, .04)
 }
 
 /* feed-box (center) */
-:not(#feedBox) .feed-box-center{
-  object-fit: fill;
+:not(#feedBox) .feed-box-center {
+	object-fit: fill;
 }
-
-
 
 /* feed-box (bot) */
-.feed-box-bot{
-  background: rgba( 255, 255, 255, 0.85 );
-  backdrop-filter: blur( 4px );
-  -webkit-backdrop-filter: blur( 4px );
+.feed-box-bot {
+	background: rgba(255, 255, 255, 0.85);
+	backdrop-filter: blur(4px);
+	-webkit-backdrop-filter: blur(4px);
 }
 
-#feed input[type="checkbox"]+label{
-  width: 50px;
-  height: 50px;
-  display: inline-block;
-  padding: 4px 8px;
-  background: var(--gray);
-  border:3px solid #707070;
-  margin: 0 4px 8px 0;
-  position: relative;
+#feed input[type="checkbox"]+label {
+	width: 50px;
+	height: 50px;
+	display: inline-block;
+	padding: 4px 8px;
+	background: var(--gray);
+	border: 3px solid #707070;
+	margin: 0 4px 8px 0;
+	position: relative;
 }
 
-#feed input[type="checkbox"]+label::after{
-  content:'✔';
-  font-size: 25px;
-  width: 30px;
-  height: 30px;
-  text-align: center;
-  position: absolute;
-  left: 0;
-  top:0;
+#feed input[type="checkbox"]+label::after {
+	content: '✔';
+	font-size: 25px;
+	width: 30px;
+	height: 30px;
+	text-align: center;
+	position: absolute;
+	left: 0;
+	top: 0;
 }
 
-
-@media (min-width: 1124px) {
-  .card-columns {
-    -webkit-column-count: 3;
-    -moz-column-count: 3;
-    column-count: 4;
-    -webkit-column-gap: 1.25rem;
-    -moz-column-gap: 1.25rem;
-    column-gap: 1.25rem;
-    orphans: 1;
-    widows: 1;
-  }
-  .card-columns .card {
-    display: inline-block;
-    width: 100%;
-  }
+@media ( min-width : 1124px) {
+	.card-columns {
+		-webkit-column-count: 3;
+		-moz-column-count: 3;
+		column-count: 4;
+		-webkit-column-gap: 1.25rem;
+		-moz-column-gap: 1.25rem;
+		column-gap: 1.25rem;
+		orphans: 1;
+		widows: 1;
+	}
+	.card-columns .card {
+		display: inline-block;
+		width: 100%;
+	}
 }
-@media screen and (min-width:1100px) and (max-width:1424px){
-	.row-box{
+
+@media screen and (min-width:1100px) and (max-width:1424px) {
+	.row-box {
 		max-width: 1100px;
-		margin:0 auto !important;
+		margin: 0 auto !important;
 		column-count: 3;
 	}
 }
-@media screen and (min-width:760px) and (max-width:1099px){
-	.card-columns{
-	column-count: 2;
-	max-width: 720px;
-	margin:0 auto !important;
-	}	
+
+@media screen and (min-width:760px) and (max-width:1099px) {
+	.card-columns {
+		column-count: 2;
+		max-width: 720px;
+		margin: 0 auto !important;
+	}
 }
-@media screen and (max-width:759px){
-	.card-columns{
-	column-count: 1;
-	max-width: 330px;
-	margin:0 auto !important;
-	}	
+
+@media screen and (max-width:759px) {
+	.card-columns {
+		column-count: 1;
+		max-width: 330px;
+		margin: 0 auto !important;
+	}
 }
-.hstack{
+
+.hstack {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
 	align-self: stretch;
 }
 
-.feed-write-btn{
+.feed-write-btn {
 	margin-right: 10px;
 }
 
-.feed-btn{
+.feed-btn {
 	top: 80px;
 	width: 50px;
 	height: 50px;
-	background: rgba( 255, 255, 255, 0.65 );
-	box-shadow: 0 8px 32px 0 rgba( 200, 200, 200, 0.37 );
-	backdrop-filter: blur( 17.5px );
-	-webkit-backdrop-filter: blur( 17.5px );
+	background: rgba(255, 255, 255, 0.65);
+	box-shadow: 0 8px 32px 0 rgba(200, 200, 200, 0.37);
+	backdrop-filter: blur(17.5px);
+	-webkit-backdrop-filter: blur(17.5px);
 	border-radius: 10px;
-	border: 1px solid rgba( 255, 255, 255, 0.18 );
+	border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
 /* ------------------------------------------- Feed Write ------------------------------------------- */
@@ -144,83 +146,87 @@ display:inline-block;
 #feedWrite .feed-box-width{
 	width: 330px;
 } */
-
-
-.xh-250{
-    max-height: 250px;
+.xh-250 {
+	max-height: 250px;
 }
 
-.xh-300{
-    max-height: 300px;
+.xh-300 {
+	max-height: 300px;
 }
 
-.object-fit{
-	object-fit: cover;	
+.object-fit {
+	object-fit: cover;
 }
- 
+
 /* feed thumbnail Btn */
-.feed-fileUpload{
+.feed-fileUpload {
 	position: absolute;
-    width: 80%;
-    height: 90%;
-    opacity: 0;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -55%);
-    cursor: pointer;
+	width: 80%;
+	height: 90%;
+	opacity: 0;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -55%);
+	cursor: pointer;
 }
 
 /* #feedCarousel 으로 시작하는 것의 모든 */
-[id^="feedCarousel"] .carousel-indicators{
-/* 	bottom: 50%;
+[id^="feedCarousel"] .carousel-indicators {
+	/* 	bottom: 50%;
 	left: 50%;
 	margin-left: -115px;
 	margin-bottom: -120px; */
 	/* bottom: 125px; */
+	
 }
 
 [id^="feedCarousel"] .carousel-indicators [data-bs-target] {
 	width: 8px;
 	height: 8px;
-    border-radius: 50%;
-    /* background-color: var(--black); */
+	border-radius: 50%;
+	/* background-color: var(--black); */
 }
 
 #feedCarousel .carousel-item {
 	min-height: fit-content;
 }
 
-#feedCarousel .carousel-item img{
-
+#feedCarousel .carousel-item img {
+	
 }
 
-[id^="feedCarousel"] .carousel{
+[id^="feedCarousel"] .carousel {
 	width: 100%;
 }
-
 
 #feedWrite input[type=radio], #feedUpdate input[type=radio] {
 	display: none;
 }
 
-
-#feedWrite input[type="radio"]:checked + label, #feedUpdate input[type="radio"]:checked + label{
+#feedWrite input[type="radio"]:checked+label, #feedUpdate input[type="radio"]:checked+label
+	{
 	background-color: var(--black);
 	color: var(--white);
 }
 
-
 /* 드롭다운 메뉴 화살표 없애기 */
 #feed-right .dropdown-toggle::after {
-    margin-left: 0;
+	margin-left: 0;
 	margin-top: 2px;
-/*     content: "⋮"; */
-    height: 100%;
-    border: none;
+	/*     content: "⋮"; */
+	height: 100%;
+	border: none;
 }
 
-
 /*  */
-.feed-comment-update{
+.feed-comment-update {
 	transform: scale(0.9);
+}
+
+/* 홈 피드 캐러셀  이미지 중앙 정렬 */
+.img-center{
+	position: absolute;
+	top: 0;
+	width: 100%;
+	height: 100%;
 }
